Alteração no title no arquivo index.html

--- a/Projeto Instagram programação do 0/INDEX.HTML
+++ b/Projeto Instagram programação do 0/INDEX.HTML
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>projeto instagram</title>
+    <title>Projeto Instagram Thiago</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
